--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -49,8 +49,37 @@ body {
   margin-bottom: 10px;
 }
 
-.tab-pane {
+.tab-content {
   padding-right: 1em;
+}
+
+/* CONNECT */
+
+#connect-toggle {
+  max-width: 600px;
+  position: relative;
+  padding: 0;
+  margin: 30px auto auto auto;
+}
+
+#connect-toggle > .connect-toggle-content {
+  position: absolute;
+  bottom: 0;
+  width: 70%;
+  left: 10%;
+  padding: 20px;
+  margin: auto;
+}
+
+#connect-toggle a {
+  min-width: 10em;
+}
+
+#connect-toggle .wait-spinner {
+  position: relative;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
 }
 
 /* SETTINGS */
