--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -49,8 +49,10 @@ body {
   margin-bottom: 10px;
 }
 
-.tab-content {
+.tab-content > .tab-pane {
   padding-right: 1em;
+  height: 100%;
+  overflow: auto;
 }
 
 /* CONNECT */
