--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -5196,6 +5196,12 @@ body {
   height: 100%;
   overflow: auto;
 }
+.tab-pane.fade {
+  -webkit-transition: opacity 0.1s linear;
+  -moz-transition: opacity 0.1s linear;
+  -o-transition: opacity 0.1s linear;
+  transition: opacity 0.1s linear;
+}
 /* CONNECT */
 #connect-toggle {
   max-width: 600px;
@@ -5224,7 +5230,7 @@ body {
 .vpn-incompatible-msg {
   color: #c09853;
 }
-.disabled-text *:not(.vpn-incompatible-msg) {
+.vpn-incompatible.disabled-text *:not(.vpn-incompatible-msg) {
   color: #999999;
 }
 .port-entry {
@@ -5235,11 +5241,8 @@ body {
   padding: 0px;
 }
 .feedback .feedback-choice {
-  padding: 1em;
   text-align: center;
-  opacity: 0.6;
-  filter: alpha(opacity=60);
-  /* For IE8 and earlier */
+  padding: 1em;
   width: 50%;
   border: thin #ccc solid;
   -webkit-border-radius: 5px;
@@ -5249,17 +5252,20 @@ body {
   -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
 }
+.feedback .feedback-choice i {
+  font-size: 50px;
+}
+.feedback .feedback-choice.deselected {
+  color: #999999;
+}
+.feedback .feedback-choice.selected {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #3a87ad;
+}
 .feedback .feedback-choice:hover {
   cursor: pointer;
   cursor: hand;
-}
-.feedback .selected {
-  color: #000;
-  opacity: 1.0;
-  filter: alpha(opacity=100);
-  /* For IE8 and earlier */
-  background-color: #EEE;
-  border: 1px solid #888;
 }
 /* LOG MESSAGES */
 .log-messages .priority-0 {
