--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -5237,17 +5237,17 @@ body {
   width: 5em;
 }
 /* FEEDBACK */
+#smiley {
+  width: 100%;
+}
 .feedback {
   padding: 0px;
 }
 .feedback .feedback-choice {
   text-align: center;
-  padding: 1em;
   width: 50%;
+  padding: 1em;
   border: thin #ccc solid;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
