Set banner filename via embeddedvalues. Fix banner height.

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -106,9 +106,8 @@ body {
   }
 }
 
-.banner {
-  margin-top: 5px;
-  margin-bottom: 10px;
+.banner img {
+  height: 60px;
 }
 
 .tab-content > .tab-pane {
