--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -5311,6 +5311,7 @@ body[dir="rtl"] .tab-content > .tab-pane {
   width: 70%;
   padding: 20px;
   margin: auto;
+  overflow: hidden;
 }
 body[dir="ltr"] #connect-toggle > .connect-toggle-content {
   left: 10%;
@@ -5397,4 +5398,7 @@ body[dir="rtl"] .global-alert {
 }
 .z-infront {
   z-index: 2;
+}
+img {
+  -ms-interpolation-mode: bicubic;
 }
