--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -281,6 +281,23 @@ body {
 }
 
 
+/* LANGUAGES */
+
+#language-pane {
+  ul {
+    margin: 1em;
+
+    li {
+      list-style-type: none;
+      margin-top: 0.5em;
+
+      i {
+        margin-right: 0.5em;
+      }
+    }
+  }
+}
+
 /* MISCELLANEOUS AND HELPERS */
 
 .global-alert {
