--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -303,6 +303,8 @@ body {
 .global-alert {
   position: fixed;
   bottom: 0;
+  white-space: nowrap;
+  overflow: hidden;
 
   body[dir="ltr"] & {
     right: 0;
