--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -202,7 +202,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -888,7 +888,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 label {
   display: block;
@@ -3352,7 +3352,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   margin-bottom: 0;
   padding: 4px 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -5414,4 +5414,84 @@ body[dir="rtl"] .global-alert {
 }
 img {
   -ms-interpolation-mode: bicubic;
+}
+/*
+ * FONTS
+ */
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../TitilliumWeb-Thin.eot');
+  src: url('../TitilliumWeb-Thin.eot') format('embedded-opentype'), url('../TitilliumWeb-Thin.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../TitilliumWeb-Light.eot');
+  src: url('../TitilliumWeb-Light.eot') format('embedded-opentype'), url('../TitilliumWeb-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../TitilliumWeb-Regular.eot');
+  src: url('../TitilliumWeb-Regular.eot') format('embedded-opentype'), url('../TitilliumWeb-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../TitilliumWeb-SemiBold.eot');
+  src: url('../TitilliumWeb-SemiBold.eot') format('embedded-opentype'), url('../TitilliumWeb-SemiBold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../TitilliumWeb-Bold.eot');
+  src: url('../TitilliumWeb-Bold.eot') format('embedded-opentype'), url('../TitilliumWeb-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../TitilliumWeb-Black.eot');
+  src: url('../TitilliumWeb-Black.eot') format('embedded-opentype'), url('../TitilliumWeb-Black.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 200;
+  src: url('../TitilliumWeb-ThinItalic.eot');
+  src: url('../TitilliumWeb-ThinItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-ThinItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 300;
+  src: url('../TitilliumWeb-LightItalic.eot');
+  src: url('../TitilliumWeb-LightItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-LightItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../TitilliumWeb-Italic.eot');
+  src: url('../TitilliumWeb-Italic.eot') format('embedded-opentype'), url('../TitilliumWeb-Italic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 600;
+  src: url('../TitilliumWeb-SemiBoldItalic.eot');
+  src: url('../TitilliumWeb-SemiBoldItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-SemiBoldItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 700;
+  src: url('../TitilliumWeb-BoldItalic.eot');
+  src: url('../TitilliumWeb-BoldItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-BoldItalic.ttf') format('truetype');
 }
