--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -330,3 +330,87 @@ body {
 img {
   -ms-interpolation-mode: bicubic;
 }
+
+
+/*
+ * FONTS
+ */
+
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 200;
+  src: url('../TitilliumWeb-Thin.eot');
+  src: url('../TitilliumWeb-Thin.eot') format('embedded-opentype'), url('../TitilliumWeb-Thin.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../TitilliumWeb-Light.eot');
+  src: url('../TitilliumWeb-Light.eot') format('embedded-opentype'), url('../TitilliumWeb-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../TitilliumWeb-Regular.eot');
+  src: url('../TitilliumWeb-Regular.eot') format('embedded-opentype'), url('../TitilliumWeb-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../TitilliumWeb-SemiBold.eot');
+  src: url('../TitilliumWeb-SemiBold.eot') format('embedded-opentype'), url('../TitilliumWeb-SemiBold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../TitilliumWeb-Bold.eot');
+  src: url('../TitilliumWeb-Bold.eot') format('embedded-opentype'), url('../TitilliumWeb-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../TitilliumWeb-Black.eot');
+  src: url('../TitilliumWeb-Black.eot') format('embedded-opentype'), url('../TitilliumWeb-Black.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 200;
+  src: url('../TitilliumWeb-ThinItalic.eot');
+  src: url('../TitilliumWeb-ThinItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-ThinItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 300;
+  src: url('../TitilliumWeb-LightItalic.eot');
+  src: url('../TitilliumWeb-LightItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-LightItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../TitilliumWeb-Italic.eot');
+  src: url('../TitilliumWeb-Italic.eot') format('embedded-opentype'), url('../TitilliumWeb-Italic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 600;
+  src: url('../TitilliumWeb-SemiBoldItalic.eot');
+  src: url('../TitilliumWeb-SemiBoldItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-SemiBoldItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 700;
+  src: url('../TitilliumWeb-BoldItalic.eot');
+  src: url('../TitilliumWeb-BoldItalic.eot') format('embedded-opentype'), url('../TitilliumWeb-BoldItalic.ttf') format('truetype');
+}
+
