--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -228,9 +228,6 @@ body {
 .feedback-smiley-container {
   margin-left: 5px;
   margin-right: 5px;
-
-    //.box-shadow(0px 0px 10px 0px rgba(50, 50, 50, 0.75));
-    //.box-shadow(5px 5px 0px #ff0000);
 }
 
 .feedback-smiley {
@@ -305,6 +302,7 @@ body {
   bottom: 0;
   white-space: nowrap;
   overflow: hidden;
+  .box-shadow(0px 0px 10px 0px rgba(50, 50, 50, 0.75));
 
   body[dir="ltr"] & {
     right: 0;
